Posting completion of the 3rd recipe & assets
Posting completion of the 3rd recipe and relevant images.
Elaborated on added line to README from last commit.
Cleaned up typos on the other web pages for the other recipes and
Added new anchor elements for full navigation.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         </p>
 
         <ol>
-            <li><a href="recipes/butternut-squash-soup.html" rel="noreferrer"><strong>Butternut Squash Soup!</strong></a> A soup as thick in looks as it is in its flavor.</li>
-            <li><a href="recipes/beef-pot-pie.html" rel="noreferrer"><strong>Beef Pot Pie!</strong></a>Not the kind of pie you might be thinking of - but not in disagreement with its filling potential!</li>
-            <li><a href="" rel="noreferrer"><strong>Example Recipe 3!</strong></a> Description here.</li>
+            <li><a href="recipes/butternut-squash-soup.html" rel="noreferrer"><strong>Butternut Squash Soup!</strong></a> A soup as thick in looks and consistency as it is in its flavor.</li>
+            <li><a href="recipes/beef-pot-pie.html" rel="noreferrer"><strong>Beef Pot Pie!</strong></a> Not the kind of pie you might be thinking of - but not in disagreement with its filling potential!</li>
+            <li><a href="./recipes/general-tao-chicken.html" rel="noreferrer"><strong>General Tao Chicken?</strong></a> A chicken with a somehwhat conflicted history, flavor, and naming convention - but not in disagreement with its tangy consistency on the <em>way</em> zestier spectrum of flavor.</li>
             <li><a href="" rel="noreferrer"><strong>Example Recipe 4!</strong></a> Description here.</li>
             <li><a href="" rel="noreferrer"><strong>Example Recipe 5!</strong></a> Description here.</li>
         </ol>
