--- a/recipes/beef-pot-pie.html
+++ b/recipes/beef-pot-pie.html
@@ -18,8 +18,10 @@
         </p>
         <img src="../images/beefpotpie2.jpg" width="350" alt="A sample image variaiton of a beef pot pie">
         <p>Just because it's a beef pot pie, doesn't mean you can't invite other ingredients.
-        Butn for the purpose of making a simple-to-follow recipe, we'll just stick with the standard issue. 
-        We'll be using a variety of veggies and cubed steak, with the necessary pie crusts - thanks to <a href="https://www.allrecipes.com/recipe/22851/beef-pot-pie-iii/">Allrecipies. (See what we did there?)</a>
+        But for the purpose of making a simple-to-follow recipe, we'll just stick with the standard issue. 
+        We'll be using a variety of veggies and cubed steak, with the necessary pie crusts - thanks to <a href="https://www.allrecipes.com/recipe/22851/beef-pot-pie-iii/">Allrecipies (See what we did there?),
+        provided by a "Stephanie!"
+        </a>
         Actual cooking time may take shorter or longer depending on your own conditions, but at the end, we'll have a quite large pie to dig into yourself and/or with others.
         Make sure to gather the necessary utensils and cooking ware, like saucepans and bowls along with containers for the ingredients if you really want to organize  - and with all that being said, here goes:
         </p>
@@ -30,7 +32,7 @@
         <hr>
         <h2>Ingredients</h2>
         <ul>
-            <li><em>1 pound sirloin steak, cubed</em></li>
+            <li><em>1 pound sirloin steak - cubed</em></li>
             <li><em>Salt and ground black pepper to taste</em></li>
             <li><em>1 (14 ounce) can beef broth</em></li>
             <li><em>3 large carrots, diced</em></li>
@@ -70,7 +72,11 @@
         <img src="../images/beefpotpie10.jpg" width="300" alt="A sample image variation of a beef pot pie in the Gallery">
         <img src="../images/beefpotpie11.jpeg" height="300" alt="A sample image variation of a beef pot pie in the Gallery">
         <img src="../images/beefpotpie12.jpg" width="300" alt="A sample image variation of a beef pot pie in the Gallery">
-        <a href="../index.html" rel="noreferrer">Go back</a>
-        <p><a href="">Next recipe</a></p>
+        <hr>
+        <a href="beef-pot-pie.html" rel="noreferrer">Go back</a>
+        <hr>
+        <a href="general-tao-chicken.html" rel="noreferrer">Next Recipe</a>
+        <hr>
+        <a href="../index.html" rel="noreferrer">Index</a>
     </body>
 </html>
