--- a/recipes/butternut-squash-soup.html
+++ b/recipes/butternut-squash-soup.html
@@ -31,7 +31,7 @@
         <hr>
         <h2>Ingredients</h2>
         <p>You're certainly welcome to follow your own intuition into what the perfect B.S.S. should be - so here's the standard, with their steps
-            (thanks to <a href="https://www.allrecipes.com/recipe/77981/butternut-squash-soup-ii/)">AllRecipe's page on the item.)</a>:
+            <a href="https://www.allrecipes.com/recipe/77981/butternut-squash-soup-ii/"></a>(thanks to >AllRecipe's page on the item, provided by a "Maplebird!".)</a>:
         </p>
         <ul>
             <li><em>2 tablespoons butter</em></li>
@@ -64,9 +64,9 @@
         <img src="../images/butternut-squash-soup8.jpg" width="250">
         <img src="../images/butternut-squash-soup7.webp" height="375">
         <hr>
-        <a href="../index.html" rel="noreferrer">Go back</a>
+        <a href="beef-pot-pie.html" rel="noreferrer">Next Recipe</a>
         <hr>
-        <a href="beef-pot-pie.html" rel="noreferrer">Next recipe</a>
+        <a href="../index.html">Go back</a>
     </body>
 
 </html>
