--- a/recipes/general-tao-chicken.html
+++ b/recipes/general-tao-chicken.html
@@ -26,7 +26,7 @@
             its invention - regardless, its standard issue recipe makes it highly variable among any cook, be it a hot-sour preference or sweet & spicy!... or just one preference - and the chicken itself
             can be fried or simply smothered in the sauce to your liking, as many iterations have done! That probably explains the many smaller differences on the name itself. 
             This dish uses not only relies on the larger ingredients themselves, but a sauce to provide that flavor. Light history lesson aside - time to get to work, thanks to 
-            <a href ="https://www.allrecipes.com/recipe/91499/general-tsaos-chicken-ii/">this AllRecipe article's take on the meal.</a>
+            <a href ="https://www.allrecipes.com/recipe/91499/general-tsaos-chicken-ii/">this AllRecipe article's take on the meal, provided by a "ChefDaddy!" .</a>
         </p>
         <hr>
         <h4>As always, the total time for preparation will likely vary based on your individual environment - for each section of time,
@@ -81,13 +81,18 @@
             have been fairly quick - the process is almost done.</li>
             <li>It's time to get the sauce into the chicken - take the drained chicken from the paper towel-lined plate and stir it into the sauce. Reduce the heat to low, and...</li>
             <li>...cook until the chicken is heated through from and has absorbed some of the sauce, giving it a shiny, almost sticky appearance and consistency respectively - <strong>an about 3 minute process!</strong></li>
-            <h3>11. Enjoy and savor!</h3>
+            <li>And that's it! Transfer to your bed of rice, fried, or white, extra veggies or none!</li>
+            <h3>12. Enjoy and savor! For finishing touches, add extra toppings like sesame seeds, or bacon if the chicken wasn't enough!</h3>
             <hr>
-            <h2>Gallery: View other GTCs here!</h2>
-            <img src=""
-            <img src=""
-            <img src=""
-            <img src=""
         </ol>
+        <h2>Gallery: View other GTCs here!</h2>
+        <img src="../images/generaltaochicken3.jpg" height="300">
+        <img src="../images/generaltaochicken4.webp" width="300">
+        <img src="../images/generaltaochicken5.jpg" width="300">
+        <img src="../images/generaltaochicken7.jpg" width="310">
+        <hr>
+        <a href="beef-pot-pie.html" rel="noreferrer">Go back</a>
+        <hr>
+        <a href="../index.html" rel="noreferrer">Index</a>
     </body>
 </html>
